# internal/bff-service/model/request/tool.go
@@ -48,3 +48,24 @@ type ToolSquareAPIKeyReq struct {
 }
 
 func (req *ToolSquareAPIKeyReq) Check() error { return nil }
+
+type ToolSelectReq struct {
+	ToolName string `json:"toolName"` // 工具名称
+}
+
+func (req *ToolSelectReq) Check() error { return nil }
+
+type ToolActionListReq struct {
+	ToolId   string `json:"toolId" validate:"required"`                        // 工具id
+	ToolType string `json:"toolType" validate:"required,oneof=builtin custom"` // 工具类型
+}
+
+func (req *ToolActionListReq) Check() error { return nil }
+
+type ToolActionReq struct {
+	ToolId     string `json:"toolId" validate:"required"`                        // 工具id
+	ToolType   string `json:"toolType" validate:"required,oneof=builtin custom"` // 工具类型
+	ActionName string `json:"actionName" validate:"required"`                    // action名称
+}
+
+func (req *ToolActionReq) Check() error { return nil }
